--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -34,6 +34,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ inputs.python-version }}
+      - name: printenv
+        run: printenv
+
       - name: Validate Package Manger
         # Stop GA if both setup.py and poetry.lock are present
         # We dont know which one to use
