DE-3890: Add new checkers to action

--- a/.github/actions/deprecation-checker/action.yaml
+++ b/.github/actions/deprecation-checker/action.yaml
@@ -27,7 +27,7 @@ runs:
         cat pylint_targets.txt | \
         xargs pylint \
           --disable=all \
-          --enable=deprecated-context-api \
+          --enable=deprecated-context-api,deprecated-task-script-util-datetime-parser-use,deprecated-task-script-util-datetime-parser-import \
           --load-plugins=deprecation_checker \
           --score=n \
           --fail-on=deprecated-context-api
