fixup! DE-3890: Add new checkers to action

--- a/.github/actions/deprecation-checker/action.yaml
+++ b/.github/actions/deprecation-checker/action.yaml
@@ -30,7 +30,7 @@ runs:
           --enable=deprecated-context-api,deprecated-task-script-util-datetime-parser-use,deprecated-task-script-util-datetime-parser-import \
           --load-plugins=deprecation_checker \
           --score=n \
-          --fail-on=deprecated-context-api
+          --fail-on=deprecated-context-api,deprecated-task-script-util-datetime-parser-use,deprecated-task-script-util-datetime-parser-import
       shell: bash
       env:
         PYTHONPATH: "${{ github.action_path }}"
