DE-3707 added step validate-github-actor

--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -39,7 +39,7 @@ jobs:
         # Proceed only if Owner file has been downloaded, make sure
         # GITHUB_ACTOR is listed in the owner file
         run: |
-          repo_name=`echo $GITHUB_REPO | awk -F "/" '{print $2}'`
+          repo_name=`echo $GITHUB_REPOSITORY | awk -F "/" '{print $2}'`
           repo_file="$repo_name.txt"
           git_repo_owner_file="https://raw.githubusercontent.com/tetrascience/ts-data-insights-code-owners/main/$repo_file"
           wget $git_repo_owner_file -T 5
