DE-3707: added debug stmt

--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -43,7 +43,12 @@ jobs:
           repo_file="$repo_name.txt"
           git_repo_owner_file="https://raw.githubusercontent.com/tetrascience/ts-data-insights-code-owners/main/$repo_file"
           wget $git_repo_owner_file
-
+          return_code=$?
+          echo "$return_code"
+          if [[ return_code != 0 ]]; then
+              echo "Failed to download $git_repo_owner_file"
+              exit 1
+          fi
           if [[ $? != 0 ]]; then
               echo "Failed to download $git_repo_owner_file"
               exit 1
