--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -45,7 +45,7 @@ jobs:
           wget $git_repo_owner_file
           return_code=$?
           echo "$return_code"
-          if [[ return_code != 0 ]]; then
+          if [[ $return_code != 0 ]]; then
               echo "Failed to download $git_repo_owner_file"
               exit 1
           fi
