DE-3707: remove repo owner file if it already exist

--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -41,6 +41,10 @@ jobs:
         run: |
           repo_name=`echo $GITHUB_REPOSITORY | awk -F "/" '{print $2}'`
           repo_file="$repo_name.txt"
+
+          if [[ -f $repo_file ]]; then
+            rm -rf $repo_file
+          fi
           git_repo_owner_file="https://raw.githubusercontent.com/tetrascience/ts-data-insights-code-owners/main/$repo_file"
           wget $git_repo_owner_file
           return_code=$?
