--- a/.github/workflows/pypi_publish.yml
+++ b/.github/workflows/pypi_publish.yml
@@ -43,9 +43,11 @@ jobs:
               echo "Failed to download $git_repo_owner_file"
               exit 1
           fi
-          grep -x $GITHUB_ACTOR $repo_file
-          if [[ $? != 0 ]]; then
-              echo "User '$GITHUB_ACTOR' is not authorized."
+          matched_actor=`grep -x $GITHUB_ACTOR $repo_file`
+          if [[ $matched_actor != $GITHUB_ACTOR ]]; then
+              echo "Unauthorized user: $GITHUB_ACTOR"
+              echo "Only following users are authorized: "
+              echo `cat $repo_file`
               exit 1
           fi
           echo "User '$GITHUB_ACTOR' is authorized."
