--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -9,10 +9,19 @@ on:
         type: string
 
 jobs:
-  publish-gh-pages:
-    name: Publish Github Pages
+  publish-docs:
+    name: "Publish Github Pages"
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
     steps:
+      # Checkout the code
+      - name: Checkout Source
+        uses: actions/checkout@v2
+        with:
+          # require all of history to see all tagged versions' docs
+          fetch-depth: 0
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -29,7 +38,7 @@ jobs:
           ref: gh-pages
           path: docs/_build
 
-       - name: Build Docs
+      - name: Build Docs
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/development' || startsWith(github.ref, 'refs/tags')
         run: |
           poetry run sphinx-mutliversion docs/sources html
