--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,22 @@
-name: Build and Publish Task-script Artifact
+name: Build and Publish Artifact To TDP
 
 on:
   workflow_call:
     inputs:
       python-version:
         type: string
-        default: 3.7
+        default: "3.7"
       namespace:
         required: true
         type: string
       slug:
         required: true
         type: string
+      type:
+        required: true
+        type: string
+        # For backwards compatibility
+        default: "task-script"
     secrets:
       AWS_ACCESS_KEY_ID:
         required: true
@@ -44,8 +49,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # NOTE: update reference here to use a different version of the action
-        uses: tetrascience/ts-deploy-task-script-action@v0.3.5
+        uses: tetrascience/ts-deploy-task-script-action@v0.4.0
         with:
+          type: ${{ inputs.type }}
           namespace: ${{ inputs.namespace }}
           slug: ${{ inputs.slug }}
           ssh_key: ${{ secrets.ssh_key }}
