--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Artifact To TDP
+name: Build and Publish Artifact
 
 on:
   workflow_call:
@@ -28,12 +28,12 @@ on:
 
 jobs:
   publish:
-    name: "Build and Publish Task Script"
+    name: "Build and Publish Artifact"
     runs-on: ubuntu-latest
     # Only run this job if it is either a pull request or if it is a tag that was pushed
     if: github.event_name == 'pull_request' || (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/'))
     steps:
-      # Checkout the task script code
+      # Checkout the code
       - name: Checkout
         uses: actions/checkout@v3
       # Setup Python and Install: Poetry, Pipenv
