--- a/.github/workflows/release_artifact_dev_uat.yml
+++ b/.github/workflows/release_artifact_dev_uat.yml
@@ -26,6 +26,9 @@ jobs:
     name: Validate Tag or Release
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          lfs: true
       - name: Validate Tag
         uses: actions/checkout@v3
         with:
