--- a/.github/workflows/release_artifact_dev_uat.yml
+++ b/.github/workflows/release_artifact_dev_uat.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Artifact Tag or Release
+name: Release Artifact to DEV and UAT
 
 on:
   workflow_call:
@@ -34,4 +34,9 @@ jobs:
         with:
           repository: tetrascience/ts-data-insights-ci-cd-common
           path: .github/tag-validator
+      - name: "LS all"
+        run: |
+          ls -l .github
+          ls -l .git/tag-validator
+          ls -l ./.github/tag-validator/.github/actions/tag-validator
       - uses: ./.github/tag-validator/.github/actions/tag-validator
