--- a/.github/workflows/release_artifact_dev_uat.yml
+++ b/.github/workflows/release_artifact_dev_uat.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: tetrascience/ts-data-insights-ci-cd-common
-          ref: "${{ inputs.deprecation_checker_ref }}"
+          ref: "${{ inputs.tag_validator_ref }}"
           path: .github/tag-validator
       - name: "LS all"
         run: |
