--- a/.github/actions/tag-validator/requirements.txt
+++ b/.github/actions/tag-validator/requirements.txt
@@ -8,6 +8,8 @@
 -i https://pypi.org/simple
 black==22.3.0
 click==8.1.3; python_version >= '3.7'
+jsonref==0.2
+loguru==0.6.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2; python_version >= '3.7'
