FIX: Type is not required, for backwards compatibility

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ on:
         required: true
         type: string
       type:
-        required: true
+        required: false
         type: string
         # For backwards compatibility
         default: "task-script"
