DEI-44: publish tag only if envt is in ['DEV/UAT', 'PROD']

--- a/.github/workflows/deploy_artifact_tag.yml
+++ b/.github/workflows/deploy_artifact_tag.yml
@@ -37,12 +37,12 @@ on:
         required: true
 
 jobs:
-  publish:
-    name: "Publish Artifact Tag to ${{ inputs.env }}"
+  deploy-artifact:
+    name: "Deploy Tag:${{ inputs.tag }} to ${{ inputs.env }}"
     environment: ${{ inputs.env }}
     runs-on: ubuntu-latest
     # Only run this job if it is either a pull request or if it is a tag that was pushed
-    if: (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/'))
+    if: (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/') && contains(['DEV/UAT', 'PROD'], inputs.env))
     steps:
       # Checkout the code
       - name: Checkout
