--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -79,7 +79,7 @@ jobs:
     if: |
       github.event_name == 'push' &&
       startsWith(github.event.ref, 'refs/tags/') &&
-      contains(fromJson('["DEV/UAT", "PROD"]'), inputs.env) &&
+      contains(fromJson('["DEV/UAT", "PROD", "PRODUCTION"]'), inputs.env) &&
       startsWith(inputs.tag, 'v')
 
     steps:
