--- a/.github/workflows/deploy_artifact_tag.yml
+++ b/.github/workflows/deploy_artifact_tag.yml
@@ -37,12 +37,34 @@ on:
         required: true
 
 jobs:
+  validate-deploy-workflow-inputs:
+    name: "Validate Environment for artifact deployment"
+    runs-on: ubuntu-latest
+    if: (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/'))
+    steps:
+      - run: |
+          echo "Inputs:"
+          echo "${{ toJSON(inputs) }}"
+
+          if [[ 'DEV/UAT' == ${{ inputs.env }} || 'PROD' = ${{ inputs.env }} ]]; then
+            echo "Artifact will be deployed to ${{ inputs.env }} environment"
+          else
+            echo "Invalid Environment: ${{ inputs.env }}"
+            echo "'inputs.env' must either be set to 'DEV/UAT' or 'PROD'"
+            exit 1
+          fi
+
+
   deploy-artifact:
+    needs: validate-deploy-workflow-inputs
     name: "Deploy Tag:${{ inputs.tag }} to ${{ inputs.env }}"
     environment: ${{ inputs.env }}
     runs-on: ubuntu-latest
-    # Only run this job if it is either a pull request or if it is a tag that was pushed
-    if: (github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/') && contains(['DEV/UAT', 'PROD'], inputs.env))
+    if: |
+      github.event_name == 'push' &&
+      startsWith(github.event.ref, 'refs/tags/') &&
+      contains(fromJson('["DEV/UAT", "PROD"]'), inputs.env) &&
+      startsWith(inputs.tag, 'v')
     steps:
       # Checkout the code
       - name: Checkout
