--- a/.github/workflows/deploy_tag.yml
+++ b/.github/workflows/deploy_tag.yml
@@ -76,7 +76,7 @@ jobs:
         # NOTE: update reference here to use a different version of the action
         uses: tetrascience/ts-deploy-task-script-action@DEI-148-deploy-to-prod
         with:
-          type: ${{ inputs.type }}
+          artifact_type: ${{ inputs.type }}
           namespace: ${{ inputs.namespace }}
           slug: ${{ inputs.slug }}
           ssh_key: ${{ secrets.ssh_key }}
