DEI-44: added validate tag job to publish_tags

--- a/.github/workflows/publish_tag.yml
+++ b/.github/workflows/publish_tag.yml
@@ -122,5 +122,5 @@ jobs:
       - name: "Validate Tag"
         uses: tetrascience/ts-action-validate-and-tag@main
         with:
-          tag: ${{ needs.determine-tag-and-ref.outputs.artifact_tag }}
+          tag: ${{ needs.determine-tag-and-ref.outputs.tag }}
           ref: ${{ needs.determine-tag-and-ref.outputs.ref }}
