DEI-44: added jobs for running tests

--- a/.github/workflows/publish_tag.yml
+++ b/.github/workflows/publish_tag.yml
@@ -180,4 +180,4 @@ jobs:
         run: |
           echo "${{ inputs.publish-to-dev-uat }}"
           echo "::group::NEEDS"
-          echo "${{ toJSON(need) }}"
+          echo "${{ toJSON(needs) }}"
